(fix) fixing minor issues in CTA overlapping the menu overlay

--- a/src/components/NewSession/NewSession.scss
+++ b/src/components/NewSession/NewSession.scss
@@ -48,6 +48,7 @@
   }
 
   &--comments-container {
+    z-index: -1;
     position: relative;
     margin: auto;
     width: 95%;
