--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -106,6 +106,8 @@ h3 {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
+  z-index: -1;
 
   &--container {
     display: flex;
